--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -9,3 +9,7 @@ nice.campo.especificacaoClassificacaoNice.obrigatorio=O campo classificação nice
 nice.campo.marca.obrigatorio=O campo marca é obrigatório.
 rpi.campo.dataRPI.obrigatorio=O campo data rpi é obrigatório.
 rpi.campo.marca.obrigatorio=O campo marca é obrigatório.
+usuario.campo.nome.obrigatorio=O campo nome é obrigatório.
+usuario.campo.email.obrigatorio=O campo email é obrigatório.
+usuario.campo.senha.obrigatorio=O campo senha é obrigatório.
+usuario.campo.email.invalido=O campo email está inválido.
