--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -13,3 +13,4 @@ usuario.campo.nome.obrigatorio=O campo nome é obrigatório.
 usuario.campo.email.obrigatorio=O campo email é obrigatório.
 usuario.campo.senha.obrigatorio=O campo senha é obrigatório.
 usuario.campo.email.invalido=O campo email está inválido.
+role.campo.nome.obrigatorio=O campo nome está obrigatório.
